--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "dayjs": "^1.11.10",
     "effect": "2.0.0-next.50",
     "framer-motion": "^10.16.4",
     "jotai": "^2.4.3",
